[package]
name = "proceed"
version = "0.1.0"
authors = ["Elias Gabriel Amaral da Silva <tolkiendili@gmail.com>"]
description = "2d procedural generation experiments"
repository = "https://github.com/dlight/proceed"
edition="2018"
license = "MIT"

[profile.dev]
opt-level = 2

[dependencies]
coffee = { git = "https://github.com/hecrj/coffee", features = ["opengl"] }

# image 0.21 because coffee and wfc uses it
# (however texture-synthesis is already on 0.22..)
image = "^0.21"
